tests/NormalTests/paczka1/small_fuzzy/22347389.err
Error in line 2: S220 A705 31,3
Error in line 1: XmmmOj A898 27,5
Error in line 3: S220 S477 8,4
